[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/placeholders/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Enemy_HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://animations/attack.tres" type="Animation" id=4]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.3874, 15.2118 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.670588, 0.670588, 0.670588, 1 ), Color( 0.486275, 0.486275, 0.486275, 1 ), Color( 0.290196, 0.290196, 0.290196, 1 ), Color( 0.290196, 0.290196, 0.290196, 1 ), Color( 0.290196, 0.290196, 0.290196, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -50.0, -80.0, -90.0, -100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.401 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 0.6, 1 ), Vector2( 0.6, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_hide"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -5.0, 15.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -15 ), Vector2( 0, -20 ), Vector2( 0, -3 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.9491, 33.8855 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Flipper" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="Flipper"]

[node name="attackBox" type="CollisionShape2D" parent="Flipper/AttackArea"]
position = Vector2( 38.7541, 1.7818 )
shape = SubResource( 1 )

[node name="bottomArea" type="Area2D" parent="Flipper"]
position = Vector2( 0, -5 )
rotation = 1.5708
scale = Vector2( 1, 2.2 )

[node name="attackBox" type="CollisionShape2D" parent="Flipper/bottomArea"]
position = Vector2( 34, 0 )
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="Flipper"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flipper/sprite"]
anims/attack = ExtResource( 4 )
anims/dead = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="detect_right" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 2147483649

[node name="floor_check" type="RayCast2D" parent="."]
position = Vector2( 32.5274, 0.113636 )
enabled = true
cast_to = Vector2( 0, 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5874 )
shape = SubResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -64.0
margin_top = -72.0
margin_right = 64.0
margin_bottom = -56.0

[node name="Health" parent="." instance=ExtResource( 5 )]
max_amount = 5
[connection signal="body_entered" from="Flipper/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="Flipper/AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="Flipper/bottomArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="Flipper/bottomArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="changed" from="Health" to="HealthBar" method="change_health"]
[connection signal="max_changed" from="Health" to="HealthBar" method="set_max_health"]
